@@ -72,34 +72,6 @@ class TestMarshal < Test::Unit::TestCase
     assert_equal("marshal data too short", e.message)
   end
 
-  class DumpTest
-    def marshal_dump
-      loop { Thread.pass }
-    end
-  end
-
-  class LoadTest
-    def marshal_dump
-      nil
-    end
-    def marshal_load(obj)
-      loop { Thread.pass }
-    end
-  end
-
-  def test_context_switch
-    o = DumpTest.new
-    Thread.new { Marshal.dump(o) }
-    GC.start
-    assert(true, '[ruby-dev:39425]')
-
-    o = LoadTest.new
-    m = Marshal.dump(o)
-    Thread.new { Marshal.load(m) }
-    GC.start
-    assert(true, '[ruby-dev:39425]')
-  end
-
   def test_taint
     x = Object.new
     x.taint
