@@ -1,3 +1,8 @@
+Wed Jun 23 21:54:17 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* marshal.c, test/ruby/test_marshal.rb: Revert r25230.  This test
+	  is troublesome.
+
 Mon Jun 21 18:12:15 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* ext/openssl/extconf.rb: check some functions added at OpenSSL 1.0.0.
